# exemcl

./: .gitmodules  CMakeLists.txt  README.md  ThirdPartyLicenses.md  setup.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pythonapi.html  quickstart.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  quickstart.ipynb.txt
docs/_sources/api/: class_view_hierarchy.rst.txt  classexemcl_1_1SubmodularFunction.rst.txt  classexemcl_1_1cpu_1_1ExemplarClusteringSubmodularFunction.rst.txt  dir_src.rst.txt  dir_src_function.rst.txt  dir_src_function_cpu.rst.txt  dir_src_io.rst.txt  file_src_function_SubmodularFunction.h.rst.txt  file_src_function_cpu_ExemplarClusteringSubmodularFunction.h.rst.txt  file_src_io_DataTypes.h.rst.txt  file_view_hierarchy.rst.txt  namespace_exemcl.rst.txt  namespace_exemcl__cpu.rst.txt  program_listing_file_src_function_SubmodularFunction.h.rst.txt  program_listing_file_src_function_cpu_ExemplarClusteringSubmodularFunction.h.rst.txt  program_listing_file_src_io_DataTypes.h.rst.txt  typedef_DataTypes_8h_1a4e5e06c1a3b42c99591dc8914389145f.rst.txt  typedef_DataTypes_8h_1a6cd772857864f8fd5bbc6c79ded44958.rst.txt  typedef_DataTypes_8h_1a91b5b6b6d9ca99cb14747d91c4ee1eda.rst.txt  typedef_DataTypes_8h_1ab9e8df9c3ced2057b0c19f52531c2e86.rst.txt  unabridged_api.rst.txt  unabridged_orphan.rst.txt
docs/api/: class_view_hierarchy.html  classexemcl_1_1SubmodularFunction.html  classexemcl_1_1cpu_1_1ExemplarClusteringSubmodularFunction.html  dir_src.html  dir_src_function.html  dir_src_function_cpu.html  dir_src_io.html  file_src_function_SubmodularFunction.h.html  file_src_function_cpu_ExemplarClusteringSubmodularFunction.h.html  file_src_io_DataTypes.h.html  file_view_hierarchy.html  library_root.html  namespace_exemcl.html  namespace_exemcl__cpu.html  program_listing_file_src_function_SubmodularFunction.h.html  program_listing_file_src_function_cpu_ExemplarClusteringSubmodularFunction.h.html  program_listing_file_src_io_DataTypes.h.html  typedef_DataTypes_8h_1a4e5e06c1a3b42c99591dc8914389145f.html  typedef_DataTypes_8h_1a6cd772857864f8fd5bbc6c79ded44958.html  typedef_DataTypes_8h_1a91b5b6b6d9ca99cb14747d91c4ee1eda.html  typedef_DataTypes_8h_1ab9e8df9c3ced2057b0c19f52531c2e86.html  unabridged_api.html  unabridged_orphan.html
docsrc/: conf.py  index.rst  pythonapi.rst
src/: CudaHelpers.cu  PythonModule.cu
src/function/: SubmodularFunction.h
src/function/cpu/: ExemplarClusteringSubmodularFunction.h
src/function/gpu/: ExemplarClusteringGPUKernels.cu  ExemplarClusteringSubmodularFunction.cuh
src/io/: DataTypes.h
tests/: CSVFile.h  UnitTests.cu  UnitTests.py
tests/testfiles/exem/: f_values.csv  ground_set.csv  marginal_values.csv  subsets.csv
tools/: coverage.sh
